@@ -1,5 +1,10 @@
 2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/plugins/youtube/youtube.py: Remove redundant HTTP request
+	when loading search results.
+
+2008-10-24  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/plugins/youtube/youtube.py: Update the YouTube URL resolution
 	code to work with Google's latest updates to YouTube.
 	(Closes: #557681)
